tests/ui/not_send3.stderr
error[E0277]: `Rc<i32>` cannot be shared between threads safely
   --> tests/ui/not_send3.rs:8:12
    |
8   |         py.allow_threads(|| {
    |            ^^^^^^^^^^^^^ `Rc<i32>` cannot be shared between threads safely
    |
    = help: the trait `Sync` is not implemented for `Rc<i32>`
    = note: required because of the requirements on the impl of `Send` for `&Rc<i32>`
note: required because it's used within this closure
   --> tests/ui/not_send3.rs:8:26
    |
8   |         py.allow_threads(|| {
    |                          ^^
    = note: required because of the requirements on the impl of `Ungil` for `[closure@$DIR/tests/ui/not_send3.rs:8:26: 8:28]`
note: required by a bound in `pyo3::Python::<'py>::allow_threads`
   --> src/marker.rs
    |
    |         F: Ungil + FnOnce() -> T,
    |            ^^^^^ required by this bound in `pyo3::Python::<'py>::allow_threads`
